--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "kartik-v/yii2-mpdf": "dev-master",
         "phpoffice/phpspreadsheet": "*",
+        "yiisoft/yii2-queue": "~2.3.1",
         "yiisoft/yii2-imagine": "*"
     },
     "require-dev": {
