--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "kartik-v/yii2-mpdf": "dev-master",
         "phpoffice/phpspreadsheet": "*",
         "yiisoft/yii2-queue": "~2.3.1",
-        "yiisoft/yii2-imagine": "*"
+        "yiisoft/yii2-imagine": "~2.2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
