--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "kartik-v/yii2-mpdf": "dev-master",
-        "phpoffice/phpspreadsheet": "*",
-        "yiisoft/yii2-queue": "~2.3.1",
-        "yiisoft/yii2-imagine": "~2.2.0"
+        "kartik-v/yii2-mpdf": "^1.0",
+        "phpoffice/phpspreadsheet": "^1.18",
+        "yiisoft/yii2-queue": "^2.3",
+        "yiisoft/yii2-imagine": "^2.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
