--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=7.4",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "yiisoft/yii2-symfonymailer": "~2.0.0",
         "kartik-v/yii2-mpdf": "^1.0",
         "phpoffice/phpspreadsheet": "^1.18",
         "yiisoft/yii2-queue": "^2.3",
