--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,3 +5,6 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php
+
+#large amount of post data
+php_value max_input_vars 3000
