--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,7 +31,7 @@ jobs:
         coverage: pcov
 
     - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer update --prefer-dist --no-progress --no-suggest
 
     - name: Wait for MySQL
       run: |
