--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,4 +49,4 @@ jobs:
         DB_DATABASE: testdb
         DB_USERNAME: root
         DB_PASSWORD: password
-      run: vendor/bin/phpunit --coverage-text
+      run: php vendor/bin/codecept run
