--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_ROOT_PASSWORD: 
           MYSQL_DATABASE: db_starter
         ports:
           - 3306:3306
@@ -48,5 +48,5 @@ jobs:
         DB_PORT: 3306
         DB_DATABASE: db_starter
         DB_USERNAME: root
-        DB_PASSWORD: ""
+        DB_PASSWORD: 
       run: php vendor/bin/codecept run
