--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: password  # Setting a password for the MySQL root user
+          MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: db_starter
         ports:
           - 3306:3306
@@ -37,8 +37,10 @@ jobs:
       run: composer update --prefer-dist --no-progress --no-suggest
 
     - name: Wait for MySQL
+      env:
+        MYSQL_PWD: password
       run: |
-        while ! mysqladmin ping -h127.0.0.1 -uroot -ppassword --silent; do
+        while ! mysqladmin ping -h127.0.0.1 -uroot --silent; do
           sleep 1
         done
 
