--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,8 +53,18 @@ jobs:
 
       - name: Run fixture
       run: |
+        export DB_HOST=127.0.0.1
+        export DB_PORT=3306
+        export DB_DATABASE=db_starter
+        export DB_USERNAME=root
+        export DB_PASSWORD=password
         php yii fixture *
 
     - name: Run tests
       run: |
+        export DB_HOST=127.0.0.1
+        export DB_PORT=3306
+        export DB_DATABASE=db_starter
+        export DB_USERNAME=root
+        export DB_PASSWORD=password
         php vendor/bin/codecept run
