--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -58,9 +58,8 @@ jobs:
         export DB_DATABASE=db_starter
         export DB_USERNAME=root
         export DB_PASSWORD=password
-        php yii fixture Backup
-        php yii fixture File
-        php yii fixture Ip
+        php yii fixture *
+        y
 
     - name: Run tests
       run: |
