--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '2'
 services:
   db:
-    image: mysql:8.0
+    image: mariadb:10.11.8
     environment:
-      MYSQL_ROOT_PASSWORD:
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: db_starter
     ports:
       - "3306:3306"
@@ -17,10 +17,10 @@ services:
       - "8000:80"
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin:5.2.1
+    image: phpmyadmin:5.2.1
     environment:
       PMA_HOST: db
-      MYSQL_ROOT_PASSWORD:
+      MYSQL_ROOT_PASSWORD: password
     ports:
       - "8080:80"
     depends_on:
